--- a/index.html
+++ b/index.html
@@ -28,24 +28,20 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">nimesh</span>
+                <span style="color: rgb(243, 4, 135);"id="name">Siri 👋</span>
             </h1>
         </div>
 
         <div class="three">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 Facere laboriosam dolorum at suscipit voluptate odio illum qui,
-               .</p>
+            <p>I just want to take a few🤌 minutes of your valuable time.</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-       Unde officia temporibus quasi possimus officiis voluptas d
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Signissimos iste tenetur cupiditate rerum, repellat illo magnam. Molestias ducimus optio alias sint! Nemo, maiores.
-
+                    To let you know how truly special you are and how much you mean to me! 🌎🌟
+                    No matter how far apart we are, your presence in my life always makes it brighter. 🌈✨😊
+            
                 </p>
             </div>
         </div>
@@ -53,13 +49,13 @@
         <div class="five">
           
             <p class="idea-3">
-                So I  just wanted to do something<br>
+                So I just wanted to do something<br>
                 <strong>special</strong>
                 .
             </p>
             <p class="idea-4">Because,</p>
             <p class="idea-5">
-                You are Special
+                You are the Special person in my life.
                 <span style="color: red;">:)</span>
             </p>
             <p class="idea-6">
@@ -72,8 +68,8 @@
             <img src="img/samantha.jpg" alt="profile" class="profile-picture" id="imagePath" />
             <!-- <img src="img/hat.svg" alt="hat" class="hat" /> -->
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday Nimesh!</h3>
-                <h5 id="wishText">let me know if you liked it 💫:)</h5>
+                <h3 class="wish-hbd">Happy Birthday Siri!!</h3>
+                <h5 id="wishText">My sam 💫:)</h5>
             </div>
         </div>
 
